[gd_scene load_steps=17 format=2]

[ext_resource path="res://replace_me/gui_example/selection_panel.gd" type="Script" id=1]
[ext_resource path="res://ivoyager/gui_widgets/selection_buttons.tscn" type="PackedScene" id=2]
[ext_resource path="res://ivoyager/gui_mods/control_sized.tscn" type="PackedScene" id=3]
[ext_resource path="res://ivoyager/gui_widgets/range_label.tscn" type="PackedScene" id=4]
[ext_resource path="res://ivoyager/gui_widgets/lat_long_label.tscn" type="PackedScene" id=5]
[ext_resource path="res://ivoyager/gui_widgets/selection_image.tscn" type="PackedScene" id=6]
[ext_resource path="res://ivoyager/gui_widgets/view_button.tscn" type="PackedScene" id=7]
[ext_resource path="res://ivoyager/gui_widgets/track_ckbxs.tscn" type="PackedScene" id=8]
[ext_resource path="res://ivoyager/gui_widgets/focal_length_buttons.tscn" type="PackedScene" id=9]
[ext_resource path="res://ivoyager/gui_widgets/selection_label.tscn" type="PackedScene" id=10]
[ext_resource path="res://ivoyager/gui_widgets/view_save_flow.tscn" type="PackedScene" id=11]
[ext_resource path="res://ivoyager/gui_widgets/selection_data.tscn" type="PackedScene" id=12]
[ext_resource path="res://ivoyager/gui_widgets/focal_length_label.tscn" type="PackedScene" id=13]
[ext_resource path="res://ivoyager/gui_widgets/up_lock_ckbx.tscn" type="PackedScene" id=14]
[ext_resource path="res://ivoyager/gui_widgets/view_save_button.tscn" type="PackedScene" id=15]
[ext_resource path="res://ivoyager/gui_widgets/huds_popup_button.tscn" type="PackedScene" id=16]

[node name="SelectionPanel" type="PanelContainer"]
anchor_top = 1.0
anchor_bottom = 1.0
offset_top = -354.0
offset_right = 893.0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBox" type="VBoxContainer" parent="."]
offset_left = 7.0
offset_top = 7.0
offset_right = 995.0
offset_bottom = 347.0
mouse_filter = 2

[node name="MainHBox" type="HBoxContainer" parent="VBox"]
offset_right = 988.0
offset_bottom = 304.0
mouse_filter = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_constants/separation = 10

[node name="LeftVBox" type="VBoxContainer" parent="VBox/MainHBox"]
offset_right = 489.0
offset_bottom = 304.0
mouse_filter = 2
size_flags_horizontal = 3
alignment = 1

[node name="HBox" type="HBoxContainer" parent="VBox/MainHBox/LeftVBox"]
offset_right = 489.0
offset_bottom = 20.0
mouse_filter = 2

[node name="SelectionButtons" parent="VBox/MainHBox/LeftVBox/HBox" instance=ExtResource( 2 )]
offset_right = 67.0
offset_bottom = 20.0
size_flags_horizontal = 2

[node name="SelectionLabel" parent="VBox/MainHBox/LeftVBox/HBox" instance=ExtResource( 10 )]
offset_left = 228.0
offset_top = 3.0
offset_right = 260.0
offset_bottom = 17.0
align = 1

[node name="Spacer" type="Control" parent="VBox/MainHBox/LeftVBox/HBox"]
offset_left = 264.0
offset_right = 489.0
offset_bottom = 20.0
mouse_filter = 2
size_flags_horizontal = 3

[node name="HBox2" type="HBoxContainer" parent="VBox/MainHBox/LeftVBox"]
offset_top = 24.0
offset_right = 489.0
offset_bottom = 38.0
mouse_filter = 2

[node name="RangeLabel" parent="VBox/MainHBox/LeftVBox/HBox2" instance=ExtResource( 4 )]
offset_right = 242.0
size_flags_horizontal = 3
align = 1

[node name="LatLongLabel" parent="VBox/MainHBox/LeftVBox/HBox2" instance=ExtResource( 5 )]
offset_left = 246.0
offset_right = 489.0
size_flags_horizontal = 3
text = "0.0 N 0.0 W"

[node name="SelectionImage" parent="VBox/MainHBox/LeftVBox" instance=ExtResource( 6 )]
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
offset_left = 0.0
offset_top = 42.0
offset_right = 489.0
offset_bottom = 304.0
stretch_mode = 6

[node name="RightVBox" type="VBoxContainer" parent="VBox/MainHBox"]
offset_left = 499.0
offset_right = 988.0
offset_bottom = 304.0
mouse_filter = 2
size_flags_horizontal = 3

[node name="ViewSaveFlow" parent="VBox/MainHBox/RightVBox" instance=ExtResource( 11 )]
unique_name_in_owner = true
offset_top = 0.0
offset_right = 489.0
offset_bottom = 20.0

[node name="HUDsPopupButton" parent="VBox/MainHBox/RightVBox/ViewSaveFlow" instance=ExtResource( 16 )]
offset_right = 109.0

[node name="ViewSaveButton" parent="VBox/MainHBox/RightVBox/ViewSaveFlow" instance=ExtResource( 15 )]
unique_name_in_owner = true
offset_left = 113.0
offset_right = 216.0
offset_bottom = 20.0

[node name="Home" parent="VBox/MainHBox/RightVBox/ViewSaveFlow" instance=ExtResource( 7 )]
offset_left = 220.0
offset_right = 332.0
text = "BUTTON_HOME"

[node name="ScrollContainer" type="ScrollContainer" parent="VBox/MainHBox/RightVBox"]
offset_top = 24.0
offset_right = 489.0
offset_bottom = 304.0
mouse_filter = 1
size_flags_horizontal = 3
size_flags_vertical = 3
scroll_horizontal_enabled = false

[node name="SelectionData" parent="VBox/MainHBox/RightVBox/ScrollContainer" instance=ExtResource( 12 )]
offset_right = 489.0
offset_bottom = 0.0

[node name="VSpacer" type="Control" parent="VBox"]
offset_top = 308.0
offset_right = 988.0
offset_bottom = 312.0
custom_minimum_size = Vector2( 0, 4 )
mouse_filter = 2

[node name="BottomHBox" type="HBoxContainer" parent="VBox"]
offset_top = 316.0
offset_right = 988.0
offset_bottom = 340.0
mouse_filter = 2

[node name="Zoom" parent="VBox/BottomHBox" instance=ExtResource( 7 )]
offset_right = 114.0
offset_bottom = 24.0
text = "BUTTON_ZOOM"

[node name="Fortyfive" parent="VBox/BottomHBox" instance=ExtResource( 7 )]
offset_left = 118.0
offset_right = 239.0
offset_bottom = 24.0
text = "BUTTON_45_DEG"

[node name="Top" parent="VBox/BottomHBox" instance=ExtResource( 7 )]
offset_left = 243.0
offset_right = 341.0
offset_bottom = 24.0
text = "BUTTON_TOP"

[node name="Spacer1" type="Control" parent="VBox/BottomHBox"]
offset_left = 345.0
offset_right = 345.0
offset_bottom = 24.0
mouse_filter = 2
size_flags_horizontal = 3

[node name="UpLockCkbx" parent="VBox/BottomHBox" instance=ExtResource( 14 )]
offset_left = 349.0
offset_right = 455.0

[node name="Spacer2" type="Control" parent="VBox/BottomHBox"]
offset_left = 459.0
offset_right = 459.0
offset_bottom = 24.0
mouse_filter = 2
size_flags_horizontal = 3

[node name="TrackCkbxs" parent="VBox/BottomHBox" instance=ExtResource( 8 )]
offset_left = 463.0
offset_right = 889.0
offset_bottom = 24.0

[node name="Spacer3" type="Control" parent="VBox/BottomHBox"]
offset_left = 893.0
offset_right = 893.0
offset_bottom = 24.0
mouse_filter = 2
size_flags_horizontal = 3

[node name="FocalLengthLabel" parent="VBox/BottomHBox" instance=ExtResource( 13 )]
offset_left = 897.0
offset_top = 5.0
offset_right = 943.0
offset_bottom = 19.0

[node name="FocalLengthButtons" parent="VBox/BottomHBox" instance=ExtResource( 9 )]
offset_left = 947.0
offset_top = 2.0
offset_right = 988.0
offset_bottom = 22.0

[node name="ControlMod" parent="." instance=ExtResource( 3 )]
